5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_825.log
== TEST (2019-03-26 19:58:20) 
-- CODE:
#exportamos pi do math
from math import *
#definmos a variavel do raio 
raio=float(input("raio"))
#definimos o valor da area e do volume
area=pi*raio**2
volume=4/3*pi*raio**3
#arrendodamos 
areaar=round(area, 3)
volumear(volume, 3)
print(areaar)
print(volumear)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    volumear(volume, 3)
NameError: name 'volumear' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:58:31) 
-- CODE:
#exportamos pi do math
from math import *
#definmos a variavel do raio 
raio=float(input("raio"))
#definimos o valor da area e do volume
area=pi*raio**2
volume=4/3*pi*raio**3
#arrendodamos 
areaar=round(area, 3)
volumear=(volume, 3)
print(areaar)
print(volumear)
-- OUTPUT:
63.617
(381.7035074111598, 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:58:46) 
-- CODE:
#exportamos pi do math
from math import *
#definmos a variavel do raio 
raio=float(input("raio"))
#definimos o valor da area e do volume
area=pi*raio**2
volume=4/3*pi*raio**3
#arrendodamos 
areaar=round(area, 3)
volumear=round(volume, 3)
print(areaar)
print(volumear)
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:58:55) 
-- CODE:
#exportamos pi do math
from math import *
#definmos a variavel do raio 
raio=float(input("raio"))
#definimos o valor da area e do volume
area=pi*raio**2
volume=4/3*pi*raio**3
#arrendodamos 
areaar=round(area, 3)
volumear=round(volume, 3)
print(areaar)
print(volumear)
-- EXECUTION TIME:
0.133982
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
